# laundromate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CI-CD-PIPELINE.md  CI-CD-SETUP.md  RAILWAY_DEPLOYMENT.md  README.md  TEST_COVERAGE_ANALYSIS.md  TEST_IMPLEMENTATION_PLAN.md  deploy-railway.sh  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  railway-services.json  railway.env.example  tsconfig.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
apps/api/: .env.example  .flake8  Dockerfile  README.md  SETUP.md  alembic.ini  cli.py  pyproject.toml  pytest.ini  requirements.txt  setup-dev.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 38b74cbbbf7a_add_super_admin_to_users.py  501db6a3e7b2_add_base_tables.py  9039b0cba195_add_notifications_relationship_to_.py  95ac8a3f92dd_initial_database_schema.py  9e8c7499d311_initial_base.py  a1b2c3d4e5f6_add_super_admin_dashboard_tables.py  b2c3d4e5f6a7_refactor_invitations_to_organization_level.py
apps/api/app/: __init__.py  main.py
apps/api/app/addresses/: router.py
apps/api/app/auth/: decorators.py  router.py  security.py
apps/api/app/core/: constants.py  dependencies.py
apps/api/app/core/config/: email_config.py  settings.py
apps/api/app/core/database/: migrate.py  session.py
apps/api/app/core/emails/: __init__.py  invitation_templates.py
apps/api/app/core/models/: __init__.py  address.py  agent_configuration.py  ai_agent.py  customer.py  invitation.py  iot_controller.py  notification.py  order.py  order_item.py  organization.py  service.py  store.py  user.py  user_organization.py  user_store.py  verification_code.py
apps/api/app/core/repositories/: __init__.py  agent_configuration_repository.py  base.py  exceptions.py  invitation_repository.py  iot_controller_repository.py  organization_repository.py  protocols.py  store_repository.py  user_organization_repository.py  user_repository.py  user_store_repository.py
apps/api/app/core/schemas/: __init__.py  address.py  agent_configuration.py  ai_agent.py  customer.py  invitation.py  iot_controller.py  notification.py  order.py  order_item.py  organization.py  service.py  store.py  user.py  user_organization.py  user_store.py
apps/api/app/core/services/: email_service.py  invitation_service.py
apps/api/app/core/templates/: invitation_email.html  invitation_email.txt
apps/api/app/customers/: router.py
apps/api/app/notifications/: router.py
apps/api/app/orders/: router.py
apps/api/app/organizations/: __init__.py  router.py
apps/api/app/services/: router.py
apps/api/app/stores/: __init__.py  router.py
apps/api/app/users/: __init__.py  router.py
apps/api/laundromate_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/scripts/: init-db.sh  setup-test-env.sh
apps/api/tests/: conftest.py
apps/api/tests/factories/: __init__.py  address_factory.py  customer_factory.py  notification_factory.py  order_factory.py  service_factory.py  user_factory.py
apps/api/tests/integration/: test_auth_routes.py  test_invitations_routes.py  test_organizations_routes.py  test_stores_routes.py
apps/api/tests/unit/: test_auth_decorators.py  test_security.py
apps/api/tests/unit/database/: __init__.py  test_models_address.py  test_models_customer.py  test_models_invitation.py  test_models_notification.py  test_models_order.py  test_models_order_item.py  test_models_organization.py  test_models_service.py  test_models_store.py  test_models_user.py  test_models_user_organization.py  test_models_user_store.py  test_models_verification_code.py
apps/api/tests/unit/domain/: test_auth.py  test_customers.py  test_email_service.py  test_invitations.py  test_notifications.py  test_orders.py  test_organizations.py  test_services.py  test_stores.py  test_user_organizations.py
apps/api/tests/unit/utilities/: test_decorators.py  test_schemas.py  test_security.py
apps/api/tests/utils/: __init__.py  assertions.py  test_data.py
(+95 files in other folders)
